--- a/Orcamentaria.Lib.Domain/Orcamentaria.Lib.Domain.csproj
+++ b/Orcamentaria.Lib.Domain/Orcamentaria.Lib.Domain.csproj
@@ -5,13 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<PackageId>Orcamentaria.Lib.Domain</PackageId>
-	<Version>8.0.0</Version>
+	<Version>9.0.5</Version>
 	<Authors>Marcelo Fernando</Authors>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.11.0" />
   </ItemGroup>
 
 </Project>
