--- a/Orcamentaria.Lib.Infrastructure/Orcamentaria.Lib.Infrastructure.csproj
+++ b/Orcamentaria.Lib.Infrastructure/Orcamentaria.Lib.Infrastructure.csproj
@@ -5,17 +5,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<PackageId>Orcamentaria.Lib.Infrastructure</PackageId>
-	<Version>2.0.0</Version>
+	<Version>4.1.0</Version>
 	<Authors>Marcelo Fernando</Authors>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.24" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.11.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Orcamentaria.Lib.Application\Orcamentaria.Lib.Application.csproj" />
     <ProjectReference Include="..\Orcamentaria.Lib.Domain\Orcamentaria.Lib.Domain.csproj" />
   </ItemGroup>
 
