--- a/Orcamentaria.Lib.Application/Orcamentaria.Lib.Application.csproj
+++ b/Orcamentaria.Lib.Application/Orcamentaria.Lib.Application.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>Orcamentaria.Lib.Application</PackageId>
-		<Version>1.3.1</Version>
+		<Version>1.4.2</Version>
 		<Authors>Marcelo Fernando</Authors>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.11.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="System.Threading.Timer" Version="4.3.0" />
   </ItemGroup>
 
