--- a/Orcamentaria.Lib.Infrastructure/Orcamentaria.Lib.Infrastructure.csproj
+++ b/Orcamentaria.Lib.Infrastructure/Orcamentaria.Lib.Infrastructure.csproj
@@ -5,13 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<PackageId>Orcamentaria.Lib.Infrastructure</PackageId>
-	<Version>4.2.3</Version>
+	<Version>4.3.1</Version>
 	<Authors>Marcelo Fernando</Authors>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.24" />
